# nsf-fmrg-data-challenge

./: .CLAUDE.md  .gitignore  CITATION.cff  DATA_USE_LICENSE.md  GITHUB_SETUP_INSTRUCTIONS.md  PREPROCESSING_PLAN.md  README.md  pyproject.toml
data/: dataset_readme.txt
notebooks/: 01_starter_code_loading_and_visualization.ipynb  02_starter_code_loading_and_visualization_standalone_colab.ipynb  03_task2_sem_band_detection_investigation.ipynb  04_full_pipeline_walkthrough.ipynb  05_baseline_pipeline_test.ipynb  06_cnn_full_training.ipynb  07_report_figures.ipynb
report/: report.tex
results/cvae/20260716_151021/: metrics.json  provenance.json
results/gp_baseline/20260716_151021/: metrics.json  provenance.json
results/gp_calib_inflation/20260716_151021/: metrics.json  provenance.json
results/gp_physmean/20260716_151021/: metrics.json  provenance.json
results/linear_baseline/20260716_151021/: metrics.json  provenance.json  t21_predictions_primary.npz
scripts/: .run_cvae.py.kate-swp  build_processed_dataset.py  check_thermal_height_alignment.py  fit_phys_gp_linear3.py  predict_track21.py  probe_roughness_gp.py  probe_roughness_signal.py  probe_waviness_gp.py  probe_waviness_gp_linear3.py  probe_waviness_gp_linear_kernel.py  probe_waviness_signal.py  run_cvae.py  run_gp_baseline.py  run_gp_calib_inflation.py  run_gp_physmean.py  run_linear_baseline.py  sem_substrate_screen.py  sem_substrate_screen_aligned.py  step0_acceptance_sweep.py  submission_checks.py  train_temporal_cnn.py
src/: nsf_fmrg_data.py  preprocessing.py  temporal_cnn.py  thermal_features.py
(+6 files in other folders)
