[project]
name = "nsf-fmrg-data-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.16.0",
    "imageio-ffmpeg>=0.6.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "torch>=2.13.0",
]
